crates/formatter/tests/snapshots/snapshots__synapse__main__delta__86__01_authenticate_media.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2024 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.

alter table remote_media_cache
	add column authenticated boolean default FALSE not null;
alter table local_media_repository
	add column authenticated boolean default FALSE not null;
